# launchd-add-logs

./: README.md  package.json  setup.cfg  setup.py
scripts/: launchd-add-logs
